objects/Personnel__c.object
<CustomObject>
    <fields>
        <fullName>CPOC_Location__c</fullName>
        <description>CPOC Loaction</description>
        <label>CPOC Location</label>
        <referenceTo>CEE_Location__c</referenceTo>
        <relationshipLabel>Personnels</relationshipLabel>
        <relationshipName>CPOC_Personnels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active related to CPOC</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPOC_Personals</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>This is a Master Object for CPOC Personnel.</description>
    <label>Personnel</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Personnel Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personnels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>